# convert_pdfs

./: .dockerignore  Dockerfile  README.md  ocr_pdf.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
